force-app/main/default/objects/Order_Category_Criteria__c/Order_Category_Criteria__c.object-meta.xml
<CustomObject>
    <label>Order Category Criteria</label>
    <nameField>
        <displayFormat>OCC-{0000}</displayFormat>
        <label>Order Category Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Category Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>