force-app/main/default/objects/Order_Category_Criteria__c/fields/Maximum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Quantity__c</fullName>
    <inlineHelpText>If no Maximum Quantity is required, set an arbitrarily high number, like 999</inlineHelpText>
    <label>Maximum Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>