force-app/main/default/objects/Order_Category_Criteria__c/fields/Order_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Category_Type__c</fullName>
    <formula>TEXT(Order_Category_Definition__r.Order_Category_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Category Type</label>
    <type>Text</type>
</CustomField>